@@ -1,3 +1,9 @@
+2005-08-22  Youchen Lee  <youchen.lee@gmail.com>
+
+	* src/nancy_bot/msgdata.cpp,
+	src/nancy_bot/nancybot.cpp,
+	src/nancy_bot/msgdata.h: Fixed an auto-learning mistake.
+
 2005-08-22  Kanru Chen  <koster@debian.org.tw>
 
 	* src/view/telnetview.cpp
